@@ -1,3 +1,17 @@
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Library General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+
 package Netcomics::HTML::Set;
 
 use strict;
@@ -43,16 +57,16 @@ sub create_set_of_pages {
 
 	%rlis = check_rlis(@rli);
 	my @comics = keys(%rlis);
-	print "comics = @comics" if $verbose;
+	print STDERR "comics = @comics" if $verbose;
 	my $num_comics = @comics;
 	if ($num_comics == 0) {
-		print "\nNot creating a new webpage.\n" if $verbose;
+		print STDERR "\nNot creating a new webpage.\n" if $verbose;
 		return;
 	}
 
-	print "\n" if $verbose;
+	print STDERR "\n" if $verbose;
 	unless ($self->{'webpage_on_stdout'}) {
-		print "Deleting old webpages (".$self->{'output_dir'} . 
+		print STDERR "Deleting old webpages (".$self->{'output_dir'} .
 				"/<index.html,comic*.html>).\n" if $verbose;
 		chdir $self->{'output_dir'};
 		unlink <index.html>;
@@ -60,16 +74,16 @@ sub create_set_of_pages {
 	}
 
 	if ($verbose) {
-		print "Creating the webpage";
-		print "s" if defined($comics_per_page);
-		print ".\n";
+		print STDERR "Creating the webpage";
+		print STDERR "s" if defined($comics_per_page);
+		print STDERR ".\n";
 	}
 
 	#create a sorted list of the comics
 	my @sorted_comics = sort({libdate_sort($a, $b, $rlis{$a}{'time'},
 										   $rlis{$b}{'time'}, $sort_by_date);} 
 							 @comics);
-	print "sorted comics: @sorted_comics\n" if $extra_verbose;
+	print STDERR "sorted comics: @sorted_comics\n" if $extra_verbose;
 
 
 	#determine number of groups of comics, and number of comics on each page
@@ -79,7 +93,7 @@ sub create_set_of_pages {
 	$num_groups =~ s/^(\d+)\.?\d*$/$1/;
 	my $comics_on_last = $num_comics % $comics_per_page;
 	$num_groups++ if $comics_on_last > 0;
-	print "number of groups    = $num_groups\n" .
+	print STDERR "number of groups    = $num_groups\n" .
 		"comics per page     = $comics_per_page\n" .
 			"comics on last page = $comics_on_last\n"
 				if $extra_verbose;
@@ -123,8 +137,8 @@ sub create_set_of_pages {
 		$last = $first + $comics_on_last - 1 
 	    if ($group_num == $num_groups && $comics_on_last > 0);
 
-		print "trying object...\n";
-		print "first = $first, last = $last\n";
+		print STDERR "trying object...\n" if $extra_verbose;
+		print STDERR "first = $first, last = $last\n" if $extra_verbose;
 		(my $filename = $webpage_filename_tmpl) =~ s/<NUM>/$group_num/g;
 		#print Data::Dumper->Dump([\%rlis],[qw(*%rlis)]);
 		#print keys(%rlis);
@@ -147,7 +161,7 @@ sub create_set_of_pages {
 			 'include_subdir' => $self->{'include_subdir'}
 			);
 
-		print "Object created...\n";
+		print STDERR "Object created...\n" if $extra_verbose;
 
 		my %returned = %{$HTML_Page->generate};
 
@@ -161,7 +175,7 @@ sub create_set_of_pages {
 		unless ($webpage_on_stdout) {
 			file_write("$self->{'output_dir'}/$filename",0664,"$page");
 		} else {
-			print "$page";
+			print STDERR "$page";
 		}
 	}
 	if ($webpage_index && ! $webpage_on_stdout) {
@@ -189,18 +203,18 @@ sub check_rlis {
 			#rli for the backup).
 			next;
 		} elsif (/1/) {
-			print "No file for $comic. $inform_maintainer",next
+			print STDERR "No file for $comic. $inform_maintainer",next
 				unless defined $rli->{'file'};
 			$rli->{'stat'} = "local";
 		} elsif (/2/) {
-			print "No url for $comic. $inform_maintainer",next
+			print STDERR "No url for $comic. $inform_maintainer",next
 				unless defined $rli->{'url'};
 			$rli->{'file'} = $rli->{'url'};
 			$rli->{'stat'} = "remote";
 		} else {
 			print STDERR "Unsupported status ($_) for $comic. " .
 				$inform_maintainer;
-			print "Skipping $comic in operation.\n" if $verbose;
+			print STDERR "Skipping $comic in operation.\n" if $verbose;
 			next;
 		}
 		$rlis{$comic} = $rli;
@@ -209,3 +223,16 @@ sub check_rlis {
 }
 
 1;
+
+
+# Local Variables:
+# tab-width: 4
+# cperl-indent-level: 4
+# cperl-continued-brace-offset: -4
+# cperl-continued-statement-offset: 4
+# cperl-label-offset: -4
+# perl-indent-level: 4
+# perl-continued-brace-offset: -4
+# perl-continued-statement-offset: 4
+# perl-label-offset: -4
+# End:
