@@ -1,5 +1,3 @@
-#-*- tab-width: 4 -*-
-#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
@@ -280,3 +278,16 @@ sub samedate {
 	return ($t1 == $t2);
 }
 1;
+
+
+# Local Variables:
+# tab-width: 4
+# cperl-indent-level: 4
+# cperl-continued-brace-offset: -4
+# cperl-continued-statement-offset: 4
+# cperl-label-offset: -4
+# perl-indent-level: 4
+# perl-continued-brace-offset: -4
+# perl-continued-statement-offset: 4
+# perl-label-offset: -4
+# End:
